# imagai

./: .env.example  .gitignore  README.md  commit_message.txt  pyproject.toml  web_interface.html  web_server.py
src/imagai/: __init__.py  cli.py  config.py  core.py  models.py  utils.py
src/imagai/providers/: base_provider.py  openai_sdk_provider.py
tests/: test_cli.py
